apps/honcho/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: honcho
spec:
  hostnames:
    - honcho.i.shikanime.studio
  parentRefs:
    - name: honcho
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: honcho-redirect
spec:
  hostnames:
    - honcho.i.shikanime.studio
  parentRefs:
    - name: honcho
      sectionName: http
